--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+    <div  id="main" class="navbar-wrapper">
       <div class="container">
 
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -155,13 +155,13 @@
 				<h1 class="lobster break" style="color: #2c3e50;">What I Know!</h1>
 				<p class="medfont">I'm going to get all professional now. So if you're interested in my profile, please read through. If you're just browsing then skip ahead &#9786.</p>
 				<p class="medfont">To give a brief background about my educational and professional career, the first thing you would want to know is that I've had access to computers from a very young age and have always been intrigued by their workings. This naturally made me take up computer science as my field of study and my bread earner.</p>
-				<h3 class="lobster break">Education</h3>
-				<h5 class="lobster break">Anna University</h5>
+				<h3 style="font-weight:bold" class="lobster break">Education</h3>
+				<h4 class="lobster break">Anna University</h4>
 				<p class="medfont">I did my undergrad in Computer Science at Anna University and graduated in 2011. During my 4 years of study I learnt all the computer science fundamentals and a lot of advanced topics as well. I was fortunate enough to get amazing exposure thanks to all the symposiums I have attended and won. I was the President of the Mathematics Club and it was truly a delightful exeprience working with my batchmates.</p>
-				<h3 class="lobster break">Work Experiences</h3>
-				<h5 class="lobster break">Cognizant Technology Solutions</h5>
+				<h3 style="font-weight:bold" class="lobster break">Work Experiences</h3>
+				<h4 class="lobster break">Cognizant Technology Solutions</h4>
 				<p class="medfont">I got placed in Cognizant by the time I graduated from Anna University. I started my job there in June 2011 and as part of my assignments, have been in Requirement Analysis, Development, Application Maintenance, Functional Studies, Quality Reviews and Testing. Expertise in working in MVC Frameworks, especially Backbone JS for smooth UI interface and functionalities with enhanced knowledge in HTML5, CSS3, JavaScript and JQuery. Worked in several projects and have received good comments from my leads in each one of them. My primary role is to develop the UI from the scratch through several JS frameworks.</p>
-				<h6 class="break">Please read my Resume for further information.</h6>
+				<h5 style="color:blue;"class="break">Please read my Resume for further information.</h5>
 			</div>
 		</section>
 		<section id="skills" class="scroll-panel">
@@ -392,6 +392,7 @@
 	  <footer>
 		
 		<div class="navbarf navbar-default navbar-fixed-bottom">
+			<p class="pull-right"><a style="margin-right: 18px;"href="#main" class="smoothScroll">Back to top</a></p>
 			<div class="container">
 				<button class="navbar-toggle" data-toggle="collapse" data-target=".navFooterCollapse">
 					<span class="icon-bar"></span>
